// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayButton renders correctly 1`] = `
<button
  className="btn btn--play"
  type="button"
>
  <svg
    height="19"
    viewBox="0 0 19 19"
    width="19"
  >
    <use
      xlinkHref="#play-s"
    />
  </svg>
  <span>
    Play
  </span>
</button>
`;

exports[`PlayButton renders correctly with additional class 1`] = `
<button
  className="btn btn--play section__button"
  type="button"
>
  <svg
    height="19"
    viewBox="0 0 19 19"
    width="19"
  >
    <use
      xlinkHref="#play-s"
    />
  </svg>
  <span>
    Play
  </span>
</button>
`;
